Favicon added, more loading text added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PriceMyCar Loader</title>
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@600&display=swap" rel="stylesheet">
@@ -202,6 +207,16 @@
       "Checking the odometer...",
       "Comparing sticker prices...",
       "Hold tight, almost there...",
+      // Australian car culture
+      "Doing a blocky...",
+      "Chucking a U-ey...",
+      "Doing laps of the servo...",
+      "Cruising the main drag...",
+      "Checking the rego...",
+      "Taking the ute for a spin...",
+      "Revving at the lights...",
+      "Heading to the car yard...",
+      "Checking under the bonnet...",
       // Pig / piggy bank themed
       "Hot on the snout of savings...",
       "Rooting around for bargains...",
